# running-portal

./: .env.example  .gitignore  README.md  pyproject.toml
portal/: __init__.py  db.py  main.py  scheduler.py  sync.py
portal/infrastructure/: __init__.py  config.py
portal/routers/: __init__.py  activities.py  ai.py  auth.py  settings.py  sync.py
prompts/: efficiency_factor_explainer.html  prompt_01_scaffold.md  prompt_02_sync.md  prompt_03_frontend.md  prompt_04_ai_trainer.md  prompt_05_today_card.md  prompt_06_design.md  prompt_08_progress_card.md  prompt_09_scatter.md  prompt_09b_ef_lines.md  prompt_10_chart_mode.md  slate_detail_page.html  slate_light_fullpage.html
src/mi_fitness_sync/activity/: client.py  transport.py
src/mi_fitness_sync/auth/: client.py
static/: app.js  style.css
templates/: base.html  detail.html  index.html  settings.html
tests/: test_ai.py  test_db.py  test_routers.py  test_scheduler.py  test_sync.py
